--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,5 +16,6 @@ jobs:
         node-version: '14.x'
     - run: sudo apt-get install -y libcairo2-dev libpango1.0-dev libpng-dev libjpeg-dev libgif-dev librsvg2-dev
     - run: npm ci
+    - run: sudo apt-get install -y libcairo2-dev libjpeg-dev libgif-dev
     - run: npm run lint
     - run: node node_modules/.bin/eslint .
