--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -22,6 +22,7 @@ jobs:
     - run: brew install giflib
     - run: brew install librsvg
     - run: npm ci
+    - run: sudo apt-get install -y libcairo2-dev libjpeg-dev libgif-dev
     - run: npm run electron:build -- --mac --publish=never
     - uses: actions/upload-artifact@v2
       with:
