Rebase against main and fix parseFloat calls

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "canvas": "^2.6.1",
     "core-js": "^3.8.1",
     "deepmerge": "^4.2.2",
+    "jquery": "^3.5.1",
+    "jsonpath": "^1.0.2",
     "lodash": "^4.17.20",
+    "sass": "^1.32.2",
     "semver": "^7.3.4",
     "sudo-prompt": "^9.2.1",
     "vue": "^2.6.12",
