--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "main": "background.js",
   "dependencies": {
     "@kubernetes/client-node": "^0.13.0",
-    "babel-plugin-module-resolver": "^4.0.0",
     "bufferutil": "^4.0.3",
     "canvas": "^2.6.1",
     "core-js": "^3.8.1",
@@ -28,6 +27,7 @@
     "sass": "^1.32.2",
     "semver": "^7.3.4",
     "sudo-prompt": "^9.2.1",
+    "utf-8-validate": "^5.0.4",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "xdg-app-paths": "^5.4.1"
@@ -42,6 +42,7 @@
     "@vue/cli-service": "^4.5.10",
     "@vue/test-utils": "^1.1.2",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-root-import": "^6.6.0",
     "electron": "^10.2.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.18.0",
