Have unit tests convert warnings into exceptions
Includes:
* Vue warnings
* Unhandled Promise Rejections
* VueSlider errors

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     ],
     "moduleNameMapper": {
       "\\.css$": "<rootDir>/src/config/emptyStubForJSLinter.js"
-    }
+    },
+    "setupFilesAfterEnv": ["./jest.setup.js"]
   },
   "browserslist": [
     "> 1%",
